--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,9 +5,9 @@ html
     link(rel='stylesheet', href='/themes/' + settings.theme + '/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/jqplot/jquery.jqplot.css')
     link(rel='stylesheet', href='/vendor/flags-css/css/flag-icon.min.css')
-    link(res='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css')
-    link(rel='stylesheet', href='//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css')
-    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
+    link(res='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.css')
+    link(rel='stylesheet', href='//cdn.datatables.net/1.11.1/css/dataTables.bootstrap4.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='//stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js')
@@ -19,9 +19,9 @@ html
     script(src='/vendor/jqplot/plugins/jqplot.barRenderer.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.categoryAxisRenderer.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js')
-    script(src='//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js')
-    script(src='//cdn.datatables.net/responsive/1.0.1/js/dataTables.responsive.js')
-    script(src='//cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js')
+    script(src='//cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js')
+    script(src='//cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.js')
+    script(src='//cdn.datatables.net/1.11.1/js/dataTables.bootstrap4.min.js')
     script(src='/javascripts/chart.js')
     script.
       $(document).ready(function(){
@@ -35,7 +35,7 @@ html
               diffString = parseFloat(json.data[0].difficulty).toFixed(2);
             }
             if (!isNaN(json.data[0].supply)) {
-              supplyString = parseInt(parseFloat(json.data[0].supply).toFixed(0)).toLocaleString('en');
+              supplyString = parseFloat(json.data[0].supply).toFixed(3).toLocaleString('en');
             }
             if (!isNaN(json.data[0].hashrate)) {
               hashrateString = parseFloat(json.data[0].hashrate).toLocaleString('en');
@@ -45,7 +45,7 @@ html
             $("#difficultyHybrid").text(json.data[0].difficultyHybrid);
             $("#hashrate").text(hashrateString);
             $("#lastPrice").text(parseFloat(json.data[0].lastPrice).toFixed(8) + ' #{settings.markets.exchange}'.toUpperCase());
-            $("#marketCap").text((parseFloat(json.data[0].lastPrice).toFixed(8) * parseInt(parseFloat(json.data[0].supply).toFixed(0))).toLocaleString('en') + ' #{settings.markets.exchange}'.toUpperCase());
+            $("#marketCap").text((parseFloat(json.data[0].lastPrice).toFixed(8) * parseFloat(json.data[0].supply).toFixed(3)).toLocaleString('en') + ' #{settings.markets.exchange}'.toUpperCase());
             $("#lblConnections").text(json.data[0].connections + ' connections');
             $("#lblBlockcount").text(json.data[0].blockcount + ' blocks');
             $("#lblX1").text(' ');
@@ -150,7 +150,7 @@ html
           if settings.display.richlist == true
             li#richlist
               a.nav-link(href='/richlist')
-                span.fa.fa-btc
+                span.fa.fa-pie-chart
                 span.menu-text #{settings.locale.menu_richlist}
           if settings.display.markets == true
             li#markets
@@ -210,7 +210,7 @@ html
               strong #{settings.locale.ex_supply} (#{settings.symbol})
             .card-body
               #supplycard
-                span.header-icons.fa.fa-pie-chart
+                span.header-icons.fa.fa-cubes
                 if settings.index.difficulty == 'Hybrid'
                   label#supply -
                   <br>
@@ -229,7 +229,7 @@ html
                 strong #{settings.markets.exchange} Price
               .card-body
                 #pricecard
-                  span.header-icons.fa.fa-rocket
+                  span.header-icons.fa.fa-space-shuttle
                   if settings.index.difficulty == 'Hybrid'
                     label#lastPrice -
                     <br>
