--- a/views/network.pug
+++ b/views/network.pug
@@ -16,3 +16,4 @@ block content
         include ./includes/net_list.pug
       #addnodes.card.card-default.tab-pane
         include ./includes/net_addnodes.pug
+    .footer-padding
